# lands.ai

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/scripts/: seed_qa.py
backend/src/lands_ai_backend/: main.py
backend/src/lands_ai_backend/api/: errors.py  router.py
backend/src/lands_ai_backend/api/v1/: audit.py  calculators.py  knowledge.py  query.py  suggestions.py
backend/src/lands_ai_backend/core/: config.py  db.py
backend/src/lands_ai_backend/schemas/: __init__.py  calculators.py  knowledge.py  query.py  suggestions.py
backend/src/lands_ai_backend/services/: __init__.py  audit_logging.py  domain_guardrail.py  knowledge_catalog.py  knowledge_ingestion.py  legal_calculators.py  online_research.py  provider_adapter.py  query_orchestration.py  retrieval_rag.py  suggestions.py  text_processing.py
backend/tests/: conftest.py  test_api_integration.py  test_errors_unit.py  test_legal_calculators_unit.py
docs/: architecture.md  compliance-audit.md  scaling-triggers.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/lib/: api.ts
frontend/tests/: admin-page.integration.test.tsx  api.unit.test.ts
