[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lands-ai-backend"
version = "0.1.0"
description = "Modular monolith FastAPI backend for lands.ai"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.3",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
